--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "view and comment on the latest news updates,loaded with programs like  mongodb, mongoose, cheerio, express, and handle-express. This app scrapes the multiple  news sights to have all your intrest in one stop shop.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,6 @@
     "express-handlebars": "^3.1.0",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.2"
-  }
+  },
+  "devDependencies": {}
 }
